# crasher-bot

./: .gitignore  README.md  bot_config.example.json  bot_config.json  bot_config_conservative.json  pyproject.toml  requirements.txt
analysis/custom/: backtest_simulator.py  best_config.json  signal_analyzer.py
analysis/db/: join_dbs.py
analysis/primary/: primary_strategy_configs.json  primary_strategy_optimizer.py
assets/: icon.icns
crasher_bot/: __init__.py  cli.py  config.py  gui.py
crasher_bot/core/: __init__.py  driver.py  engine.py  hotstreak.py  session.py  sound.py
crasher_bot/strategies/: __init__.py
crasher_bot/ui/: __init__.py  app.py  widgets.py
scripts/: build.bat  build.sh  crasher_bot.spec
